--- a/public/Spearhead.html
+++ b/public/Spearhead.html
@@ -78,7 +78,7 @@
 
 </section>
 
-<section id="leads">
+<!-- <section id="leads">
   <div class="leaders">
     <h1>Meet your Cell Leaders</h1>
   </div>
@@ -97,7 +97,7 @@
       <h1>Bro. Spike Yellow</h1>
     </div>
   </div>
-</section>
+</section> -->
 
 <section id="blogs">
   <div class="desc">
@@ -134,6 +134,20 @@
         </div>
       </div>
   </div>
+</section>
+
+<section id="pandA">
+    
+  <div class="pandA">
+
+    <div class="announcement">
+      <h1>Announcement</h1>
+      <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
+      <a href="Announcement.html?Prompt=announcement"><button class="button"><span><h1>Be updated </h1></span></button></a>
+    </div>
+
+  </div>
+
 </section>
 
   <div class="bottomLinks">
