--- a/public/EquipForm.html
+++ b/public/EquipForm.html
@@ -14,7 +14,7 @@
 <body>
 
  
-  <header>
+  <header class="nav">
     <a href="index.html" class="logo">JGLWHM</a>
     <div class="navigation">
       <ul class="menu">
@@ -48,7 +48,7 @@
 
     <body>
         <div class="textPrayer">
-            <h1>Mentoring Registration Form</h1>
+            <h1 id="titleofProgram">Placeholder</h1>
           </div>
           
           <div class="containers">
@@ -66,7 +66,7 @@
           </div>
     </body>
 
-    <div class="bottomLinks">
+    <div class="bottomLinks1">
 
         <!--
       footer will appear here
