--- a/public/LifeClass.html
+++ b/public/LifeClass.html
@@ -78,7 +78,7 @@
     <a href="EquipForm.html?equipProgram=lifeclass"><button>Click here</button></a>
   </div>
 
-  <div class="bottomLinks">
+  <div class="bottomLinks1">
 
     <!--
     footer will appear here
