--- a/public/SOL.html
+++ b/public/SOL.html
@@ -91,7 +91,7 @@
     <a href="EquipForm.html?equipProgram=solclass"><button>Click here</button></a>
 </div>
 
-<div class="bottomLinks">
+<div class="bottomLinks1">
 
    <!--
   footer will appear here
