--- a/public/Wildfire.html
+++ b/public/Wildfire.html
@@ -113,7 +113,7 @@
             </div>
         </div>
 
-<div class="bottomLinks">
+<div class="bottomLinks1">
     <!--
   footer will appear here
 -->
