--- a/public/J12Kids.html
+++ b/public/J12Kids.html
@@ -81,7 +81,7 @@
     </div>
 </section>
 
-<section id="teachers">
+<!-- <section id="teachers">
     <div class="teachers ">
         <div class = "meet">
             <h1>Meet our Teachers!</h1>
@@ -224,7 +224,7 @@
             </div>
 
         </div>  
-    </div>
+    </div> -->
 </section>
 
     <section id="blogs">
@@ -275,7 +275,7 @@
   
   </section>
 
-    <div class="bottomLinks">
+    <div class="bottomLinks1">
 
        <!--
       footer will appear here
