--- a/public/J12Kids.html
+++ b/public/J12Kids.html
@@ -148,7 +148,7 @@
                 </div>
             </div>
         </div>  
-    </div>
+    </div> -->
 
     <div class="teachers2 ">
         <div class = "meet">
