Final Freaking Update
Dawd i hate this shit

--- a/public/J12Kids.html
+++ b/public/J12Kids.html
@@ -20,7 +20,7 @@
             <div class="close-btn"></div>
             <li class="menu-item"><a href="index.html">Home</a></li>
             <li class="menu-item">
-              <a class="sub-btn" href="#">Connects +</a>
+              <a class="sub-btn" id="highlightConnects" href="#">Connects +</a>
               <ul class="sub-menu">
                 <li class="sub-item"><a href="Sundayservice.html?Prompt=sundaySchool">Sunday Service</a></li>
                 <li class="sub-item"><a href="Wildfire.html?Prompt=wildFire">Wildfire</a></li>
@@ -150,7 +150,7 @@
         </div>  
     </div> -->
 
-    <div class="teachers2 ">
+    <!-- <div class="teachers2 ">
         <div class = "meet">
             <h1>Meet our Teachers!</h1>
         </div>
