--- a/public/Sundayservice.html
+++ b/public/Sundayservice.html
@@ -1,190 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Sundayservice.css">
-    <link rel="stylesheet" href="NavbarSundayService.css">
-    <link rel="icon" href="https://thegreatlight.web.app/HeadnFooter/logo.png" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Sundayservice.css" />
+    <link rel="stylesheet" href="NavbarSundayService.css" />
+    <link
+      rel="icon"
+      href="https://thegreatlight.web.app/HeadnFooter/logo.png"
+    />
     <script defer src="sundayService.js" type="module"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      charset="utf-8"
+    ></script>
     <title>Sunday Service</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <a href="index.html" class="logo">JGLWHM</a>
+      <div class="navigation">
+        <ul class="menu">
+          <div class="close-btn"></div>
+          <li class="menu-item"><a href="index.html">Home</a></li>
+          <li class="menu-item">
+            <a class="sub-btn" id="highlightConnects" href="#">Connects +</a>
+            <ul class="sub-menu">
+              <li class="sub-item">
+                <a href="Sundayservice.html?Prompt=sundaySchool"
+                  >Sunday Service</a
+                >
+              </li>
+              <li class="sub-item">
+                <a href="Wildfire.html?Prompt=wildFire">Wildfire</a>
+              </li>
+              <li class="sub-item">
+                <a href="J12Kids.html?Prompt=j12kids">J12 Kids</a>
+              </li>
+              <li class="sub-item">
+                <a href="Spearhead.html?Prompt=spearHead">Spearhead</a>
+              </li>
+              <li class="sub-item">
+                <a href="Married4Life.html?Prompt=married4life"
+                  >Married For Life</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="menu-item">
+            <a class="sub-btn" href="#">Equipping +</a>
+            <ul class="sub-menu">
+              <li class="sub-item"><a href="Mentoring.html">Mentoring</a></li>
+              <li class="sub-item"><a href="SOL.html">SOL CLass</a></li>
+              <li class="sub-item"><a href="LifeClass.html">Lifeclass</a></li>
+            </ul>
+          </li>
+          <li class="menu-item"><a href="Media.html">Media</a></li>
+          <li class="menu-item">
+            <a href="index.html#prayerRequest">Prayer Request</a>
+          </li>
+          <li class="menu-item">
+            <a href="Announcement.html?Prompt=announcement">Announcements</a>
+          </li>
+        </ul>
+      </div>
+      <div class="menu-btn"></div>
+    </header>
 
-  <header>
-    <a href="index.html" class="logo">JGLWHM</a>
-    <div class="navigation">
-      <ul class="menu">
-        <div class="close-btn"></div>
-        <li class="menu-item"><a href="index.html">Home</a></li>
-        <li class="menu-item">
-          <a class="sub-btn" href="#">Connects +</a>
-          <ul class="sub-menu">
-            <li class="sub-item"><a href="Sundayservice.html?Prompt=sundaySchool">Sunday Service</a></li>
-            <li class="sub-item"><a href="Wildfire.html?Prompt=wildFire">Wildfire</a></li>
-            <li class="sub-item"><a href="J12Kids.html?Prompt=j12kids">J12 Kids</a></li>
-            <li class="sub-item"><a href="Spearhead.html?Prompt=spearHead">Spearhead</a></li>
-            <li class="sub-item"><a href="Married4Life.html?Prompt=married4life">Married For Life</a></li>
-          </ul>
-        </li>
-        <li class="menu-item">
-          <a class="sub-btn" href="#">Equipping +</a>
-          <ul class="sub-menu">
-            <li class="sub-item"><a href="Mentoring.html">Mentoring</a></li>
-            <li class="sub-item"><a href="SOL.html">SOL CLass</a></li>
-            <li class="sub-item"><a href="LifeClass.html">Lifeclass</a></li>
-          </ul>
-        </li>
-        <li class="menu-item"><a href="Media.html">Media</a></li>
-        <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
-        <li class="menu-item"><a href="Announcement.html?Prompt=announcement">Announcements</a></li>
-      </ul>
-    </div>
-    <div class="menu-btn"></div>
-  </header>
+    <section id="aboutus">
+      <div class="banner">
+        <p id="noice">Connects</p>
+        <h1>Sunday Service</h1>
+      </div>
 
-<section id="aboutus">
-  <div class="banner">
-    <p id="noice">Connects</p>
-    <h1>Sunday Service</h1>
-  </div>
+      <div class="container">
+        <h1>Welcome to our Sunday Service!</h1>
+        <p>
+          Our Sunday Service is a time for our church community to come together
+          to celebrate God's love and grace. We gather each week to sing hymns
+          and worship songs, pray together, hear a relevant and inspiring
+          message from the Bible, and participate in communion.
+        </p>
+        <p id="shim">
+          Our worship services are designed to be welcoming and inclusive, and
+          all are invited to join us regardless of background or experience with
+          church. We strive to create a warm and friendly atmosphere where
+          everyone feels valued and loved.
+        </p>
+        <p id="shim">
+          We would be honored to have you join us for our Sunday Worship Service
+          and hope that you will find encouragement, inspiration, and community
+          as we come together to worship God.
+        </p>
+      </div>
 
-  <div class="container">
-    <h1>Welcome to our Sunday Service!</h1>
-    <p>Our Sunday Service is a time for our church community to come together to celebrate God's love and grace. We gather each week to sing hymns and worship songs, pray together, hear a relevant and inspiring message from the Bible, and participate in communion.</p>
-    <p id="shim">Our worship services are designed to be welcoming and inclusive, and all are invited to join us regardless of background or experience with church. We strive to create a warm and friendly atmosphere where everyone feels valued and loved.</p>
-    <p id="shim">We would be honored to have you join us for our Sunday Worship Service and hope that you will find encouragement, inspiration, and community as we come together to worship God.</p>
-  </div>
+      <div class="containerImg">
+        <h3>This year's theme</h3>
+        <img src="SundaySchooltings/pressingAhead.jpg" alt="" />
+        <h1>
+          "Continue to move forward in one's faith journey, regardless of the
+          obstacles or challenges that may arise."
+        </h1>
+      </div>
+    </section>
 
-  <div class="containerImg">
-    <h3>This year's theme</h3>
-    <img src="SundaySchooltings/pressingAhead.jpg" alt="">
-    <h1>"Continue to move forward in one's faith journey, regardless of the obstacles or challenges that may arise."</h1>
-  </div>
-</section>
+    <section id="sermons">
+      <div class="words1">
+        <h1>Sermons</h1>
+      </div>
 
-<section id="sermons">
-  <div class="words1">
-    <h1>Sermons</h1>
-  </div>
+      <div class="sermons">
+        <div class="live" id="livediv">
+          <h1 id="livesermons">Live Sermons</h1>
+          <iframe
+            id="firstLive"
+            src=""
+            width="560"
+            height="314"
+            style="border: none; overflow: hidden"
+            scrolling="no"
+            frameborder="0"
+            allowfullscreen="true"
+            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
+            allowfullscreen="true"
+          ></iframe>
+        </div>
 
-  <div class="sermons">
-
-    <div class="live" id="livediv">
-      <h1 id="livesermons">Live Sermons</h1>
-      <iframe id="firstLive" src="" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
-    </div>
-
-    <div class="pastLive">
-        <h1>Past Sermons</h1>
-      <div class="scroll" id="programContainer">
-
-        <!--
+        <div class="pastLive">
+          <h1>Past Sermons</h1>
+          <div class="scroll" id="programContainer">
+            <!--
             stuff will appear here
 
         -->
+          </div>
+        </div>
       </div>
-    </div>
 
-  </div>
+      <div class="words">
+        <h1>Past Sermons</h1>
+      </div>
 
-  <div class="words">
-    <h1>Past Sermons</h1>
-  </div>
+      <div class="bruh">
+        <a href="Archive1.html">
+          <div class="noice">
+            <h1>Tithes and Offering</h1>
+          </div>
+        </a>
 
-  <div class="bruh">
+        <a href="Archive2.html">
+          <div class="noice">
+            <h1>Salvation</h1>
+          </div>
+        </a>
 
-    <a href="Archive1.html">
-    <div class="noice">
-      <h1>Tithes and Offering</h1>
-    </div>
-    </a>
+        <a href="Archive3.html">
+          <div class="noice">
+            <h1>Sinners</h1>
+          </div>
+        </a>
 
-    <a href="Archive2.html">
-    <div class="noice">
-      <h1>Salvation</h1>
-    </div>
-    </a>
+        <a href="Archive4.html">
+          <div class="noice">
+            <h1>Miracles in Life</h1>
+          </div>
+        </a>
 
-    <a href="Archive3.html">
-    <div class="noice">
-      <h1>Sinners</h1>
-    </div>
-    </a>
+        <a href="Archive5.html">
+          <div class="noice">
+            <h1>Guard your Heart</h1>
+          </div>
+        </a>
+      </div>
+    </section>
 
-    <a href="Archive4.html">
-    <div class="noice">
-      <h1>Miracles in Life</h1>
-    </div>
-    </a>
+    <section id="pandA">
+      <div class="pandA">
+        <div class="announcement">
+          <h1>Announcement</h1>
+          <p>
+            Here you will find information about upcoming events, activities,
+            and other news from our church community. We update this page
+            regularly, so be sure to check back often for the latest updates.
+          </p>
+          <a href="Announcement.html?Prompt=announcement"
+            ><button class="button">
+              <span><h1>Be updated</h1></span>
+            </button></a
+          >
+        </div>
+      </div>
+    </section>
 
-    <a href="Archive5.html">
-    <div class="noice">
-      <h1>Guard your Heart</h1>
-    </div>
-    </a>
-  </div>
-    
-</section>
-
-
-<section id="pandA">
-    
-  <div class="pandA">
-
-    <div class="announcement">
-      <h1>Announcement</h1>
-      <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
-      <a href="Announcement.html?Prompt=announcement"><button class="button"><span><h1>Be updated </h1></span></button></a>
-    </div>
-
-  </div>
-
-</section>
-
-<div class="bottomLinks1">
- <!--
+    <div class="bottomLinks1">
+      <!--
   footer will appear here
 -->
-  
-</div>
+    </div>
+  </body>
 
-</body>
+  <script>
+    //jquery for toggle dropdown menus
+    $(document).ready(function () {
+      //toggle sub-menus
+      $(".sub-btn").click(function () {
+        $(this).next(".sub-menu").slideToggle();
+      });
 
-<script>
-  //jquery for toggle dropdown menus
-$(document).ready(function(){
-  //toggle sub-menus
-  $(".sub-btn").click(function(){
-    $(this).next(".sub-menu").slideToggle();
-  });
+      //toggle more-menus
+      $(".more-btn").click(function () {
+        $(this).next(".more-menu").slideToggle();
+      });
+    });
 
-  //toggle more-menus
-  $(".more-btn").click(function(){
-    $(this).next(".more-menu").slideToggle();
-  });
-});
+    //javascript for the responsive navigation menu
+    var menu = document.querySelector(".menu");
+    var menuBtn = document.querySelector(".menu-btn");
+    var closeBtn = document.querySelector(".close-btn");
 
-//javascript for the responsive navigation menu
-var menu = document.querySelector(".menu");
-var menuBtn = document.querySelector(".menu-btn");
-var closeBtn = document.querySelector(".close-btn");
+    menuBtn.addEventListener("click", () => {
+      menu.classList.add("active");
+    });
 
-menuBtn.addEventListener("click", () => {
-  menu.classList.add("active");
-});
+    closeBtn.addEventListener("click", () => {
+      menu.classList.remove("active");
+    });
 
-closeBtn.addEventListener("click", () => {
-  menu.classList.remove("active");
-});
-
-//javascript for the navigation bar effects on scroll
-window.addEventListener("scroll", function(){
-  var header = document.querySelector("header");
-  header.classList.toggle("sticky", window.scrollY > 0);
-});
-</script>
-
+    //javascript for the navigation bar effects on scroll
+    window.addEventListener("scroll", function () {
+      var header = document.querySelector("header");
+      header.classList.toggle("sticky", window.scrollY > 0);
+    });
+  </script>
 </html>
