--- a/public/galleryOne.html
+++ b/public/galleryOne.html
@@ -38,7 +38,7 @@
             <li class="sub-item"><a href="LifeClass.html">Lifeclass</a></li>
           </ul>
         </li>
-        <li class="menu-item"><a href="Media.html">Media</a></li>
+        <li class="menu-item"><a href="Media.html" id="highlightMedia">Media</a></li>
         <li class="menu-item"><a href="index.html#prayerRequest">Prayer Request</a></li>
         <li class="menu-item"><a href="Announcement.html?Prompt=announcement">Announcements</a></li>
       </ul>
