--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
       <div class="navigation">
         <ul class="menu">
           <div class="close-btn"></div>
-          <li class="menu-item"><a href="index.html">Home</a></li>
+          <li class="menu-item"><a href="index.html" id="highlightConnects">Home</a></li>
           <li class="menu-item">
-            <a class="sub-btn" id="highlightConnects" href="index.html#connects">Connects +</a>
+            <a class="sub-btn" href="index.html#connects">Connects +</a>
             <ul class="sub-menu">
               <li class="sub-item"><a href="Sundayservice.html?Prompt=sundaySchool">Sunday Service</a></li>
               <li class="sub-item"><a href="Wildfire.html?Prompt=wildFire">Wildfire</a></li>
