--- a/public/EquipForm.html
+++ b/public/EquipForm.html
@@ -93,14 +93,8 @@
           />
           <br />
           <label>Contact Number: </label> <br />
-          <input
-            type="tel"
-            id="phoneNum"
-            required
-            placeholder="09272261788"
-            maxlength="11"
-            pattern="[0-9]{11}"
-          />
+          <input type="tel" id="phoneNum" required placeholder="09272261788"
+          oninput="this.value=(this.value.match('[0-9]+'))"" maxlength="11" />
           <br />
           <button id="equipFormBtn">Submit</button>
         </form>
