--- a/public/PrayerRequest.html
+++ b/public/PrayerRequest.html
@@ -53,7 +53,7 @@
             <label>Name (Optional) </label> <br>
             <input type="text" id="fullName" oninput="this.value=(this.value.match('[a-zA-Z ]+'))""/> <br>
             <label>Primary Leader </label> <br>
-            <input type="email" id="email"  oninput="this.value=(this.value.match('[a-zA-Z ]+'))"" required /> <br>
+            <input type="text" id="email"  oninput="this.value=(this.value.match('[a-zA-Z ]+'))"" required /> <br>
             <label>Contact Number (Optional)  </label> <br>
             <input type="tel" id="phoneNum"  placeholder="09123456789" oninput="this.value=(this.value.match('[0-9]+'))"" maxlength="11" /> <br>
             <label>Prayer Request</label>
